[package]
name = "seed_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde_urlencoded = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"
csv = "1.1"
printpdf = { version = "0.3", optional = true }


[features]
default = []
pdf_export = ["printpdf"]





